syntax = "proto3";

option java_package = "com.example.vpassport";
option java_multiple_files = true;

message AppSettings {

    bool darkMode = 1;
    Language language = 2;

    enum Language {
        ENGLISH = 0;
        GERMAN = 1;
    }
}

message Passport {
    string documentNumber = 1;
    string documentType = 2;
    string issuer = 3;
    string name = 4;
    string nationality = 5;
    string birthDate = 6;
    string sex = 7;
    string issueDate = 8;
    string expiryDate = 9;
    string documentNumberSignature = 10;
    string documentTypeSignature = 11;
    string issuerSignature = 12;
    string nameSignature = 13;
    string nationalitySignature = 14;
    string birthDateSignature = 15;
    string sexSignature = 16;
    string issueDateSignature = 17;
    string expiryDateSignature = 18;
    bytes photo = 19;
}